@@ -3,6 +3,7 @@
 * WebUI: Import / export wallets form/to a JSON file
 * Switched off support for stealth addresses
 * Client: do not try to commit a block until all off its parents are done - added HasAllParents() method
+* Client: CommitBlock() returns error, discard all the blocks that depend on it - added network.DiscardedBlocks
 
 1.6.4 - 2016-06-27
 * Use trully volatile, quickly switachable wallets from WebUI (requires 1.5GB more RAM)
